<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".ui.MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/menu_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <!--<item
        android:id="@+id/action_syncItem"
        android:orderInCategory="100"
        android:title="@string/action_syncItem"
        app:showAsAction="never" />-->
    <item
        android:id="@+id/action_orderItem"
        android:orderInCategory="100"
        android:title="@string/action_orderItem"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_showItem"
        android:orderInCategory="100"
        android:title="@string/action_showItem"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_cleanNoteItem"
        android:orderInCategory="100"
        android:title="@string/action_cleanNoteItem"
        app:showAsAction="never" />

</menu>
